--- a/index.html
+++ b/index.html
@@ -4,8 +4,80 @@
         <meta charset="utf-8">
         <title>DeLorean DMC-12</title>
         <link rel="stylesheet" href="index.css">
+        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Bree Serif" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <!-- Здесь применять вашу самую сильную магию -->
+        <header>
+		    <div class="name">
+			    <h1>Ekb Newspaper</h1>
+		    </div>
+		    <div class="line">
+                Ekaterinburg, Thursday, October 22
+		    </div>
+        </header>
+        <article class="quotes">
+		    <h3>Quotes about Autumn</h3>
+            <q>It looked like the world was covered in a cobbler crust of brown sugar and cinnamon.</q><hr>
+		    <q>You expected to be sad in the fall. Part of you died each year when the leaves fell from the
+            trees and their branches were bare against the wind and the cold, wintery light. But you knew
+            there would always be the spring, as you knew the river would flow again after it was frozen.
+            When the cold rains kept on and killed the spring, it was as though a young person died for no
+            reason.</q><hr>
+            <q>I would rather sit on a pumpkin, and have it all to myself,
+            than be crowded on a velvet cushion.</q><hr>
+            <q>Autumn seemed to arrive suddenly that year. The morning of the first September was crisp
+            and golden as an apple.</q><hr>
+            <q>No spring nor summer beauty hath such grace as I have seen in one autumnal face.</q>
+        </article>
+        <article class="main_news">
+            <h2>Ural State Academy of Architecture and Arts hosts first StartUp Design Week</h2>
+            <img src="https://jnswire.s3.amazonaws.com/jns-media/6f/2b/71207/pitch.jpg" 
+            alt="Ural State Academy of Architecture and Arts hosts first StartUp Design Week"
+            width="100%" style="border: solid 3px grey">
+            <p>Ural State Academy of Architecture and Arts organized and hosted the very first Ural
+            International Forum Design from April 1 to April 3, 2015, as part of StartUp Design Week.
+            The main goal of the event was to create a way to communicate between young design
+            professionals and experts in the architecture and business industries. Attendees included
+            representatives from large companies like D-link, Convex, Salt, Wacom, IC ARCHITECT,
+            Schneider Electric and others. The panel of judges included teachers, potential investors,
+            entrepreneurs and experts from the MBA academy. Two contestants won best report, one of
+            which was Anna Prokhorova, who created "personal products for the diagnosis and prevention
+            of depression." This project has stirred a sizable controversy about the topic. Many
+            activities took place at the event, including a panel that discussed "Modern vectors of
+            design and architecture," a lecture about "National policy in the field of design," as well
+            as several presentations from design professionals and design students.</p>
+        </article>
+        <article class="other_news">
+		    <h2>Other news</h2>
+		    <h3>Ural Airlines modifies rewards program</h3>
+            <p>As Ural Airlines' Wings customer loyalty program has grown, the company has found it
+            necessary to re-number program cards. Previously, members were assigned a seven-digit number.
+            Those numbers will now contain 10 digits; existing members should just add a "100" prefix to
+            their seven-digit number. For example, card number 1234567 would become 1001234567. Current
+            Wings members can verify new account numbers by logging on to www.uralairlines.com and
+            clicking the dashboard online. Once logged into your profile, click the "membership cards" tab.
+            Those interested in signing up for a Wings account can do so at the same website. Wings
+            participants can accumulate bonus points that can be used for free tickets and upgrades.</p>
+            <h3>URFU hosts annual natural history festival</h3>
+            <p>Ural Federal University's (URFU) Institute of Natural Sciences recently hosted a festival
+            event to celebrate the IV Traditional Festival of Earth and Universe. The theme of the event
+            was "Lasers Everywhere" in honor of the 50th anniversary of the Nobel Prize going to
+            A. M. Prokhorov, Charles Townes and N. G. Basov; their work in quantum electronics, amplifiers 
+            and oscillators significantly contributed to the invention of the laser. Scientists from URFU
+            explained to students that lasers can be used in many industries, including biology, physics,
+            medicine, chemistry and astronomy. Alexander Germanenko, the head of the department of
+            computer physics, presented a half-hour lecture about popular science titled "What is a laser"?
+            Students then had the opportunity to break into study groups and learn how to use lasers in
+            biology, physics, medicine, chemistry and astronomy. They also took a quiz about lasers. The
+            students were also required to create several proposals about applying lasers in their
+            industries. These ideas were given to a board of jury members. The winner will be announced at
+            the next festival. Founded in 1920 and located in Yekarerinburg, URFU is the oldest university
+            in the Ural region. It has 5,640 academic staff members and 57,000 students.</p>
+        </article>
+        <footer>
+            2015 &copy; Ekb Newspaper
+        </footer>
     </body>
 </html>
